k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: js-demo1
  name: js-demo1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: js-demo1
  template:
    metadata:
      labels:
        app: js-demo1
    spec:
      containers:
        - image: quay.io/nodejs/js-demo1:latest
          imagePullPolicy: Always
          name: node-demo1
          ports:
            - containerPort: 10000
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
