k8s/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: node-demo1
  labels:
    app: node-demo1
spec:
  selector:
    app: node-demo1
  replicas: 1
  template:
    metadata:
      labels:
        app: node-demo1
    spec:
      containers:
        - name: node-demo1
          image: image-registry.openshift-image-registry.svc:5000/node-demo/node-demo1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              protocol: TCP
  triggers:
  - type: ConfigChange 
  - imageChangeParams:
      automatic: true
      containerNames:
      - node-demo1
      from:
        kind: ImageStreamTag
        name: node-demo1:latest
    type: ImageChange
