k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: node-demo1
  name: node-demo1
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: node-demo1
    weight: 100
